[package]
name = "netconf-over-quinn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
quinn = "0.11.5"
rcgen = { version = "0.13.1", default-features = false, features = ["ring"] }
rustls = { version = "0.23.13", default-features = false, features = ["ring", "std"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
